--- a/New-Site/datasetVisualization.html
+++ b/New-Site/datasetVisualization.html
@@ -3,62 +3,33 @@
 <head>
 <meta charset="utf-8">
 <title>CAFE Analysis - Data </title>
-<link href="css/Redo.css" rel="stylesheet" type="text/css">
+<link href="css/sam-Redo.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<!-- <script src="js/header.js"></script> -->
-<div id="navbar" class="flexContainerPrimary">
-    <div class="section">
-        <!-- Button: -->
-        <div class="pages">
-            <a href="index.html">
-                <div class="link">
-                    Home
-                </div>
-            </a>
-        </div>
+	<script src="js/samNewHeader.js"></script>
 
-        <!-- Button: -->
-        <div class="pages">
-            <a href="index.html">
-                <div class="link">
-                    CAFE&nbspDataset
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="section">
-        <div id="websiteTitle">
-            Consumer Vehicle Fuel Economy
-        </div>
-    </div>
-    <div class="section">
-        <!-- Button: -->
-        <div class="pages">
-            <a href="datasetVisualization.html">
-                <div class="link">
-                    Visualization
-                </div>
-            </a>
-        </div>
+	<h2 class="siteTitleDataVis">Data Graphs</h2>
 
-        <!-- Button: -->
-        <div class="pages">
-            <a href="aboutUs.html">
-                <div class="link">
-                    About Us
-                </div>
-            </a>
-        </div>
-    </div>
+	<div id="top"></div>
+	
+	<div class="sectionContainer">
+		<div class="section">
+			<img alt="Graph of CAFE data from 2004 to 2017" src="img/data/DataVis/Overall-Graph-Line.png" usemap="#image_map" class="dataGraph">
+<map name="image_map" class="dataGraph">
+  <area alt="Toyota" title="Toyota" href="" coords="1234,1018 1160,1010 1305,999 1614,726 1773,681 1926,667 2355,426 2366,437 2094,604 1932,684 1773,701 1623,740 1313,1018 1262,1021 " shape="polygon">
+  <area alt="Honda" title="Honda" href="" coords="2355,360 2343,349 2392,357 2357,391 2360,377 2238,420 2088,536 1932,633 1776,641 1654,704 1611,709 1770,624 1926,616 2079,522 2233,403 " shape="polygon">
+  <area alt="Nissan" title="Nissan" href="" coords="1353,956 1458,845 1614,709 1765,681 1923,638 2284,460 2096,582 1932,655 1765,684 1614,726 1467,851 " shape="polygon">
+  <area alt="General Motors" title="General Motors" href="" coords="896,1044 1004,1050 1308,1027 1467,922 1623,905 1779,712 1875,689 1929,684 2085,616 2363,460 2366,474 2392,434 2363,457 2360,443 2238,519 2088,607 1929,684 1875,689 1776,698 1756,709 1614,888 1464,905 1365,973 1313,1016 1143,1027 993,1038 " shape="polygon">
+  <area alt="Ford" title="Ford" href="" coords="1206,1038 1311,1061 1472,987 1532,916 1549,896 1626,806 1776,789 1932,706 2088,664 2363,465 2363,474 2369,471 2372,477 2386,443 2369,471 2363,474 2363,460 2284,505 2233,545 2082,650 1929,692 1773,772 1620,789 1523,896 1549,896 1532,916 1506,916 1461,973 1311,1044 1262,1030 " shape="polygon">
+</map>
 
-
-
-
-</div>
-
+		</div>
+	</div>
+	
+	
+	
 <div class="flexContainerPrimary">
     <div class=" graphContainer flexContainerSecondary large ">
         <div class="sectionContainer graphContainer">
